--- a/journal/2023-01-10.md
+++ b/journal/2023-01-10.md
@@ -72,3 +72,55 @@
 [7]:https://marketplace.visualstudio.com/items?itemName=ziok2010.vscode-paste-image-ftp "Paste Image Ftp v0.2.2, by ziok2010(2017)paste image from clipboard directly and upload ftp server"
 [8]: https://marketplace.visualstudio.com/ "  Visual Studio   |   Marketplace"
 [9]: http://125.229.149.182:8000/zh-tw/note_system/剪貼簿/paste_image "Paste Image 3C工程師的福音 > 從此貼圖有word的便利、卻能有markdown的簡約感、未來感"
+
+> by https://matters.news/@mjysci, 2021 年 10 月 5 日
+- Evernote恰恰是网页摘抄做得太好，让使用者过于依赖反而停止了思考，所以我的用法有所不同：摘抄用[diigo][diigo_wiki]，看完立即思考，组织语言写感想并记入[Joplin][Joplin]（一个基于markdown的类Evernote开源笔记软件）。时间紧则简单写几个关键词待空闲时扩充。
+- 利用Joplin强大的搜索功能可以立即找到相关文章和自己提炼的心得，若对网页链接的文章生疏了则点开链接，这时浏览器的diigo插件会给之前的摘抄高亮显示便于立即唤起记忆。
+- 官網
+  - [Diigo](https://www.diigo.com/)
+  - [joplinapp.org](https://joplinapp.org/)
+
+[diigo_wiki]: https://zh.wikipedia.org/zh-tw/Diigo "Diigo是一個社會性書籤網站，Diigo是'Digest of Internet Information, Groups and Other stuff'的縮寫。除了可以將網頁添加作書籤、添加標籤，使用者還可以將網頁內容突出顯示、添加說明，還可以將這些書籤作為公開或私藏，還可以將書籤與朋友分享。 維基百科"
+[Joplin]: https://en.wikipedia.org/wiki/Joplin_(software) "譯自英文-Joplin是一個免費的開源桌面和移動筆記應用程序，以JavaScript編寫，用於類Unix和Microsoft Windows操作系統，以及iOS，Android和Linux / Windows終端。桌面應用程序使用Electron製作，而移動應用程序使用React Native。 维基百科（英文)"
+
+# Roam Research
+
+items|Obsidian|Roam|LogSeq|description
+-|:-:|:-:|:-:|-
+UI|3|1|2+|
+VUC|1|||visualizing usable connections between notes
+backlinks||1|1|easiest, most intuitive, and most visual way to surface backlinks
+Sidebar|3|2+|1|less customizable, but more clearly functional
+Block Ref||1|1|best for making powerful connections between atomic note elements across notes
+MD|1|||best implementation of standard Markdown formatting
+Search/Query|||1|most powerful search tools and best implementation of embedded queries
+Daily Notes||1|1|most functional, clearly understood implementation of Daily Notes
+Tasks|||1|best implementation of task management features
+Expandability|1|||easiest and most powerful way to expand capabilities of the core application
+Theming|1|||easiest way to customize the look and feel of the application without needing to know CSS
+Data Portability|1|||most flexible for moving data in and out
+Publishing and Sharing|1|||easiest way to securely share contents from your PKM
+Data Security|1||2+|most secure storage and syncing of your notes library
+Mobile Experience|1++|||best experience for working with your notes from an iPhone
+Pricing|1|3--||
+
+[MIKE22]: https://thesweetsetup.com/obsidian-vs-roam/ "Obsidian vs. Roam vs. LogSeq: Which PKM App is Right For You?, FEBRUARY 28, 2022, BY MIKE SCHMITZ"
+
+# Foam
+
+> vscode如果要取代個人wiki、作為非線性知識連結的首選，
+> 就必須仰賴Foam插件的安裝及使用。
+
+## Foam簡介
+
+- [Foam][foam_official]致力於建立[卡片盒筆記法][Zettelkasten][^3]的數位版本[^1]、以及付費個人筆記系統[Roam][RR][^2]的開源版本。
+  - 相對於付費軟體[Roam][RR]、Foam 是免費的、開源的，並且具有極強的可擴展性以適合您的個人工作流程。 您擁有您使用 Foam 創建的信息，您可以自由地分享它，並與任何你想要的人合作。
+
+[^1]: Foam 是一個個人知識管理和共享系統，其靈感來自商業軟體[Roam Research][RR]，構建於 Visual Studio Code 和 GitHub 之上。 您可以使用 Foam 來組織您的研究，保留可重新發現的筆記，編寫長篇內容，並可選擇將其發佈到網絡上。([Foam官網][foam_official])
+[^2]: 一款網絡思考的筆記工具、像文檔一樣易於使用、與圖形數據庫一樣強大，Roam 可幫助長期組織您的研究。([Roam官網][RR])
+[^3]: 卡片盒筆記法（德語：Zettelkasten），是種筆記法，與知識管理的方法。卡片盒筆記法有許多變種，多以運用卡片索引的方式，串聯各種筆記。通卡片盒筆記法常用於創作文學或科學作品([wiki:Zettelkasten][Zettelkasten])
+
+[RR]: https://roamresearch.com/ "一款網絡思考的筆記工具、像文檔一樣易於使用、與圖形數據庫一樣強大，Roam 可幫助長期組織您的研究。"
+[Zettelkasten]: https://zh.m.wikipedia.org/zh-tw/卡片盒筆記法 "卡片盒筆記法（德語：Zettelkasten），是種筆記法，與知識管理的方法。卡片盒筆記法有許多變種，多以運用卡片索引的方式，串聯各種筆記。通卡片盒筆記法常用於創作文學或科學作品"
+[foam_official]: https://foambubble.github.io/foam/ "Foam 是一個個人知識管理和共享系統，其靈感來自 Roam Research，構建於 Visual Studio Code 和 GitHub 之上。您可以使用 Foam 來組織您的研究，保留可重新發現的筆記，編寫長篇內容，並可選擇將其發佈到網絡上。"
+
