--- a/journal/2023-01-11.md
+++ b/journal/2023-01-11.md
@@ -42,8 +42,19 @@
 - 目標：優化EarthMap介面、順利推出成為公司服務網頁
 - 功能需求
   1. 新增時間控制bar(播放、點選、滑動)如圖1
-  2. 增加城市名稱
-  3. 
+  2. 增加城市名稱如圖2
+  3. 優化控制介面：同一時間、不同範圍之切換、如圖3
 
-![圖1](https://raw.githubusercontent.com/sinotec2/foam1/master/attachments/2023-01-11-11-21-33.png)
-![圖2](https://raw.githubusercontent.com/sinotec2/foam1/master/attachments/2023-01-11-11-23-40.png)
+|![圖1](https://raw.githubusercontent.com/sinotec2/foam1/master/attachments/2023-01-11-11-21-33.png)|
+|:-:|
+|圖1 時間控制拉bar(播放、點選、滑動)|
+
+### 圖2
+
+|![圖2](https://raw.githubusercontent.com/sinotec2/foam1/master/attachments/2023-01-11-11-23-40.png)|
+|:-:|
+|圖2 map with city names|
+
+|![圖3](https://raw.githubusercontent.com/sinotec2/foam1/master/attachments/2023-01-11-11-29-16.png)|
+|:-:|
+|圖3 同一時間、不同範圍之切換|
